# RoboLiDAR_SDK

./: README.md
How to make ROI filter map/: How to make ROI filter map.md
Using SDK without ROS example/: READ ME.MD
Using SDK without ROS example/sdk_without_ros/: CMakeLists.txt  readme.txt
Using SDK without ROS example/sdk_without_ros/args/: align.txt  perception_args.xml~
Using SDK without ROS example/sdk_without_ros/data/: test_pcd.pcd
Using SDK without ROS example/sdk_without_ros/demo/: sdk_without_ros.cpp
Using SDK without ROS example/sdk_without_ros/include/classification/: classifyCommon.h
Using SDK without ROS example/sdk_without_ros/include/common/algorithm/gp/: cov.h  cov_factory.h  cov_linear_one.h  cov_matern3_iso.h  cov_matern5_iso.h  cov_prod.h  cov_sum.h  gp_sparse.h  gp_utils.h  input_dim_filter.h  sampleset.h
Using SDK without ROS example/sdk_without_ros/include/common/data_type/: basic_types.h  cluster_type.h  obj_type.h  perception_type.h  robo_types.h  target_type.h
Using SDK without ROS example/sdk_without_ros/include/common/geometry/: convex_hullxy.h  geo_base.h  ground_planefit.h  transformer.h
Using SDK without ROS example/sdk_without_ros/include/detection/: detector.h
Using SDK without ROS example/sdk_without_ros/include/detection/ground_estimator/: ground_estimator.h
Using SDK without ROS example/sdk_without_ros/include/detection/segmenter/: segFeature.h  segmenter.h
Using SDK without ROS example/sdk_without_ros/include/preprocessing/: preprocessing.h
Using SDK without ROS example/sdk_without_ros/include/robosense/: robosense.h
auto_align_tool/: CMakeLists.txt  README.md
auto_align_tool/cfg/: demo.rviz
auto_align_tool/include/: mainwindow.h
doc/: opencv_softlink.sh  更新说明.txt  速腾软件包说明.md
enviornment/robosense_sdk/: CMakeLists.txt  Doxyfile  package.xml
enviornment/robosense_sdk/car_rviz_model/map/: default.urdf  default.urdf~
enviornment/robosense_sdk/car_rviz_model/no_map/: default.urdf  default.urdf~
enviornment/robosense_sdk/cfg/: robosense_map_test.rviz  robosense_no_map_test.rviz
enviornment/robosense_sdk/demo/: test_with_map.cpp  test_without_map.cpp
enviornment/robosense_sdk/launch/: 16_bag_with_map.launch  16_offline_without_map.launch  16_online_without_map.launch  32_bag_with_map.launch  32_bag_without_map.launch
enviornment/robosense_sdk/tools/: robo_draw_rviz.cpp  robo_draw_rviz.h
enviornment/robosense_sdk/tools/communication/: communication.cpp  communication.h  communication_type.h
enviornment/robosense_sdk/usr_args/: perception_args_16.xml  perception_args_16_withoutmap.xml  perception_args_32.xml  perception_args_32_withoutmap.xml
loclalization install file/: 建图数据采集要求.md
(+59 files in other folders)
